update & trace